force-app/main/default/objects/BIField_Column__c/BIField_Column__c.object-meta.xml
<CustomObject>
    <label>BI Field/Column</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>BI Field/Column Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BI Fields/Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>