force-app/main/default/objects/BIField_Column__c/fields/BI_Field__c.field-meta.xml
<CustomField>
    <fullName>BI_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BI Field</label>
    <referenceTo>BiField__c</referenceTo>
    <relationshipLabel>Columns</relationshipLabel>
    <relationshipName>BI_Field_Column</relationshipName>
    <type>Lookup</type>
</CustomField>