force-app/main/default/objects/BIField_Column__c/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Column</label>
    <referenceTo>Column__c</referenceTo>
    <relationshipLabel>BI Fields</relationshipLabel>
    <relationshipName>BI_Field_Column</relationshipName>
    <type>Lookup</type>
</CustomField>