force-app/main/default/objects/BIField_Column__c/fields/Field_Column_Id__c.field-meta.xml
<CustomField>
    <fullName>Field_Column_Id__c</fullName>
    <externalId>true</externalId>
    <label>Field_Column_Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>